Fix catalog page title, and spacing of dropdown filter

--- a/src/styles/layouts/_catalog-page.scss
+++ b/src/styles/layouts/_catalog-page.scss
@@ -24,6 +24,8 @@
   &__filter-mobile {
     @include button-secondary;
     margin-bottom: $margin-7xl;
+    padding-block: $padding-sm;
+    padding-inline: $padding-2xl;
 
     @include laptop {
       display: none;
@@ -70,6 +72,7 @@
     background-color: #1d1c28;
     padding: $padding-lg;
     display: flex;
+    flex-wrap: wrap;
     gap: $gap-lg;
     align-items: flex-start;
     margin-block: $margin-5xl;
